client/src/styles/toggleTolerance.styling.scss
@import './breakpoints';

.toggleContainer {
	display: flex;
	flex-direction: row;
}

.toggleWrapper {
	display: flex;
	position: relative;
	justify-content: center;
	align-items: center;
	gap: 1rem;
	left: 1vw;
}

.switch {
	position: relative;
	display: inline-block;
	width: 53px;
	height: 23px;
	border-radius: 34px;
}

.switch input {
	opacity: 0;
	width: 0;
	height: 0;
}

.slider {
	position: absolute;
	cursor: pointer;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: hsl(222.65deg 89.25% 18.24%);
	-webkit-transition: 0.4s;
	transition: 0.4s;
	border-radius: 30px;
}

.slider:before {
	position: absolute;
	content: '';
	height: 18px;
	width: 20px;
	left: 4px;
	bottom: 4px;
	background-color: white;
	-webkit-transition: 0.4s;
	transition: 0.4s;
	border-radius: 50%;
}

input:checked + .slider {
	background-color: hsl(222.65deg 89.25% 18.24%);
}

input:focus + .slider {
	box-shadow: 0 0 1px hsl(222.65deg 89.25% 18.24%);
}

input:checked + .slider:before {
	-webkit-transform: translateX(26px);
	-ms-transform: translateX(26px);
	transform: translateX(26px);
}

@include minDesktop {
	.toggleContainer {
		display: flex;
		flex-direction: row;
		position: relative;
		top: 2vh;
	}

	.toggleWrapper{
		display: flex;
		position: relative;
		justify-content: center ;
		align-items: center;
		gap: 0rem !important;
		left:.5vw;
	}
	.toggleLabel {
		display: flex;
		position: relative;
		bottom: 1vh;
		left: 1vw;
	}
	.switch {
		position: relative;
		display: inline-block;
		width: 46px;
		height: 20px;
		border-radius: 34px;
	}

	.switch input {
		opacity: 0;
		width: 0;
		height: 0;
	}

	.slider:before {
		position: absolute;
		content: '';
		height: 17px;
		width: 20px;
		left: 0px;
		bottom: 2px;
		background-color: white;
		-webkit-transition: 0.4s;
		transition: 0.4s;
		border-radius: 50%;
	}
}

